# SortWallpaper

./: CMakeLists.txt  README.md
inc/: determineImageSize.h
src/: determineImageSize.c  main.c
